--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>CS110</title>
     <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
     <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
+    <py-env>
+        - turtle
+        - paths:
+          - /main.py
+      </py-env>
   </head>
   <body>
     <py-repl id="my-repl" auto-generate="true"> </py-repl>
